examples/test/testpolicy4083.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4083
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key3: value1
      key6: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value6
          key47: value33
      podSelector:
        matchLabels:
          key44: value15
